force-app/main/default/objects/Account/fields/Rendez_vous__c.field-meta.xml
<CustomField>
    <fullName>Rendez_vous__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rendez-vous</label>
    <referenceTo>Rendez_vous__c</referenceTo>
    <relationshipLabel>Comptes</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>