force-app/main/default/objects/Account/recordTypes/Account.recordType-meta.xml
<RecordType>
    <fullName>Account</fullName>
    <active>false</active>
    <label>Account</label>
</RecordType>