force-app/main/default/objects/Account/recordTypes/Compte_Personnel.recordType-meta.xml
<RecordType>
    <fullName>Compte_Personnel</fullName>
    <active>true</active>
    <label>Compte Personnel</label>
</RecordType>