force-app/main/default/objects/Account/listViews/Mes_comptes.listView-meta.xml
<ListView>
    <fullName>Mes_comptes</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Mine</filterScope>
    <label>Mes comptes</label>
</ListView>